[package]
name = "ps_skeleton"
version = "0.1.0"
authors = ["Abimanyu"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-http = "2.0.0"
actix-web = { version = "3.0.2", features = ["rustls"] }
actix-cors =   "0.3.0"
actix-files = "0.3.0"
#actix-session = "0.4.0"
actix-utils = "2.0.0"
rustls = "0.18.1"
config = "0.10.1"
glob = "0.3.0"

#Template Engine
askama = "0.10.3"

#hasing
#bcrypt = "0.8.2"

#date time
#chrono = "0.4.15"f

#Database ORM
#diesel = "1.4.5"

#Other
env_logger = "0.7.1"
#jsonwebtoken = "7.2.0"
#serde_json = "1.0.57"
#rand = "0.7.3"
derive_more = "0.99.10"

#handler
#failure = "0.1.8"
#futures = "0.3.5"
#bytes = "0.5.6"
#fail = "0.4.0"